# qs

./: Cargo.toml  IDEA  SYNTAX  TODO  ast.json  main.qs
src/: cli.rs  main.rs
src/parser/: ast.rs  grammar.pest  mod.rs  pest.rs
src/runtime/: formater.rs  mod.rs  ops.rs  storage.rs
